@@ -155,34 +155,46 @@ void StringTable::SetString(ObjectStringID id, uint8_t language, const std::stri
 void StringTable::Sort()
 {
     auto targetLanguage = LocalisationService_GetCurrentLanguage();
-    std::sort(_strings.begin(), _strings.end(), [targetLanguage](const StringTableEntry& a, const StringTableEntry& b) -> bool {
-        if (a.Id == b.Id)
-        {
-            if (a.LanguageId == b.LanguageId)
+    auto fallbackLanguage = LanguagesDescriptors[targetLanguage].fallback;
+    std::sort(
+        _strings.begin(), _strings.end(),
+        [targetLanguage, fallbackLanguage](const StringTableEntry& a, const StringTableEntry& b) -> bool {
+            if (a.Id == b.Id)
             {
-                return String::Compare(a.Text, b.Text, true) < 0;
-            }
+                if (a.LanguageId == b.LanguageId)
+                {
+                    return String::Compare(a.Text, b.Text, true) < 0;
+                }
 
-            if (a.LanguageId == targetLanguage)
-            {
-                return true;
-            }
-            if (b.LanguageId == targetLanguage)
-            {
-                return false;
-            }
+                if (a.LanguageId == targetLanguage)
+                {
+                    return true;
+                }
+                if (b.LanguageId == targetLanguage)
+                {
+                    return false;
+                }
 
-            if (a.LanguageId == LANGUAGE_ENGLISH_UK)
-            {
-                return true;
-            }
-            if (b.LanguageId == LANGUAGE_ENGLISH_UK)
-            {
-                return false;
-            }
+                if (fallbackLanguage != LANGUAGE_UNDEFINED)
+                {
+                    if (a.LanguageId == fallbackLanguage)
+                        return true;
 
-            return a.LanguageId < b.LanguageId;
-        }
-        return a.Id < b.Id;
-    });
+                    if (b.LanguageId == fallbackLanguage)
+                        return false;
+                }
+
+                if (a.LanguageId == LANGUAGE_ENGLISH_UK)
+                {
+                    return true;
+                }
+                if (b.LanguageId == LANGUAGE_ENGLISH_UK)
+                {
+                    return false;
+                }
+
+                return a.LanguageId < b.LanguageId;
+            }
+            return a.Id < b.Id;
+        });
 }
