@@ -5,6 +5,7 @@
 - Feature: [#18744] Cheat to allow using a regular path as a queue path.
 - Improved: [#18749] Ability to have 4 active awards for more than one month in a row. 
 - Improved: [#18826] [Plugin] Added all actions and their documentation to plugin API.
+- Improved: [#18945] Languages can now fall back to other languages than English.
 - Fix: [#18467] “Selected only” Object Selection filter is active in Track Designs Manager, and cannot be toggled.
 - Fix: [#18905] Ride Construction window theme is not applied correctly.
 - Fix: [#18911] Mini Golf station does not draw correctly from all angles.
